# polyedge

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/: __init__.py  config.py
backend/src/api/: __init__.py  app.py
backend/src/api/routes/: health.py  markets.py  signals.py  subscriptions.py  track_record.py  tracking.py
backend/src/db/: __init__.py  client.py
backend/src/models/: __init__.py  market.py  news.py  signal.py  social.py
backend/src/services/: __init__.py
backend/src/services/data_sources/: __init__.py  base.py  news.py  polymarket.py  rate_limiter.py  social.py
backend/src/services/signals/: __init__.py  generator.py  rules.py  scanner.py
backend/src/services/tracking/: __init__.py  tracker.py
backend/tests/: __init__.py  test_market_filtering.py  test_signals.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/signals/: page.tsx
frontend/src/app/track-record/: page.tsx
frontend/src/components/: EmailCapture.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/markets/: MarketCard.tsx
frontend/src/components/signals/: ActiveSignals.tsx  SignalCard.tsx
frontend/src/components/track-record/: SignalHistory.tsx  StatsHero.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_email_subscriptions.sql
